<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EmailVerification"
    android:background="@color/primary_gray">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/border_margin"
        android:layout_marginEnd="@dimen/border_margin"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/border_margin_big"
            android:text="@string/text_email_verification"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/h2" />

        <TextView
            android:id="@+id/textView_greeting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/greeting"
            android:textColor="@color/white"
            android:textSize="@dimen/h3" />

        <TextView
            android:id="@+id/textView_emial_intro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/border_margin"
            android:text="@string/text_email_verification_under_02"
            android:textColor="@color/white"
            android:textSize="@dimen/plain_text" />

        <TextView
            android:id="@+id/textView_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/empty_value"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/plain_text" />

        <TextView
            android:id="@+id/textView_spam_memo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/border_margin"
            android:text="@string/text_email_verification_under_03"
            android:textColor="@color/white"
            android:textSize="@dimen/plain_text" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/border_margin_big"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_resend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/primary_orange"
                android:text="@string/button_resend_verification"
                android:textColor="@color/white"
                android:textSize="@dimen/buttonText" />

            <Button
                android:id="@+id/button_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/border_margin"
                android:layout_weight="1"
                android:backgroundTint="@color/primary_orange"
                android:text="@string/button_back"
                android:textColor="@color/white"
                android:textSize="@dimen/buttonText" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>