<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.UserConfigureGetCompanyCodeActivity"
    android:background="@color/primary_gray">

    <TextView
        android:id="@+id/hello_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/border_margin"
        android:layout_marginTop="@dimen/border_margin"
        android:text="@string/greeting"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/white"
        android:textSize="@dimen/h2" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="wrap_content"
        android:layout_height="400dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/success_get_code"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/border_margin_big"
            android:text="@string/comapny_succeed"
            android:textColor="@color/white"
            android:textSize="@dimen/h2" />

        <TextView
            android:id="@+id/yourCodeIs"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/border_margin_big"
            android:text="@string/your_company_code_is"
            android:textColor="@color/white"
            android:textSize="@dimen/h3" />

        <TextView
            android:id="@+id/company_code"
            android:layout_width="@dimen/EditTextWidth"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:text="@string/empty_value"
            android:textColor="@color/white"
            android:textSize="@dimen/h2" />

        <Button
            android:id="@+id/button_proceed"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginTop="@dimen/border_margin_big"
            android:backgroundTint="@color/primary_orange"
            android:text="@string/proceed"
            android:textColor="@color/white"
            android:textSize="@dimen/buttonText" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="@dimen/EditTextWidth"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/border_margin"
        android:layout_marginEnd="@dimen/border_margin"
        android:text="@string/send_company_code_info"
        android:textColorHint="@color/light_gray"
        android:textSize="@dimen/editText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />

</androidx.constraintlayout.widget.ConstraintLayout>