<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserConfigureInputCompanyCode"
    android:background="@color/primary_gray">

    <TextView
        android:id="@+id/hello_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/border_margin"
        android:layout_marginTop="@dimen/border_margin"
        android:text="@string/greeting"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/white"
        android:textSize="@dimen/h2" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="wrap_content"
        android:layout_height="400dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/input_company_code"
            android:layout_width="@dimen/EditTextWidth"
            android:layout_height="@dimen/EditTextHeight"
            android:autofillHints="hej"
            android:ems="10"
            android:hint="@string/enter_company_code"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textColorHint="@color/light_gray"
            android:textSize="@dimen/editText" />

        <Button
            android:id="@+id/button_join_company"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginTop="@dimen/border_margin_big"
            android:backgroundTint="@color/primary_orange"
            android:text="@string/join_company"
            android:textColor="@color/white"
            android:textSize="@dimen/buttonText" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="@dimen/EditTextWidth"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/border_margin"
        android:layout_marginEnd="@dimen/border_margin"
        android:text="@string/company_code_info"
        android:textColorHint="@color/light_gray"
        android:textSize="@dimen/editText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />

</androidx.constraintlayout.widget.ConstraintLayout>