<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.UserConfigureInitActivity"
    android:background="@color/primary_gray">

    <TextView
        android:id="@+id/hello_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/border_margin"
        android:layout_marginTop="@dimen/border_margin"
        android:text="@string/greeting"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/white"
        android:textSize="@dimen/h2" />

    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button_join_company"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginTop="@dimen/border_margin_big"
            android:text="@string/join_company"
            android:backgroundTint="@color/primary_orange"
            android:textColor="@color/white"
            android:textSize="@dimen/buttonText"/>
        <Button
            android:id="@+id/button_create_company"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginTop="@dimen/border_margin_big"
            android:text="@string/create_company"
            android:backgroundTint="@color/primary_orange"
            android:textColor="@color/white"
            android:textSize="@dimen/buttonText"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>